My developer Edition/src/objects/category__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <description>detailed description of the material</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <description>price of the  commodity</description>
        <label>price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>quantity__c</fullName>
        <description>quantity available in the store</description>
        <label>quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>